Set up Mocha scaffolding

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+
+        <script src="bower_components/angular/angular.js"></script>
+
+        <title>YouTube Playlist</title>
     </head>
-    <body>
+    <body ng="YouTubeApp">
         <h1>Sup Bitches</h1>
+
+        <script src="youtubeApp.js"></script>
     </body>
 </html>
