Fill out file structure

--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html  ng-app="YouTubeApp">
     <head>
         <meta charset="utf-8">
 
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
         <title>YouTube Playlist</title>
     </head>
-    <body ng="YouTubeApp">
-        <h1>Sup Bitches</h1>
+    <body>
+        <h1>Hello World</h1>
 
         <script src="youtubeApp.js"></script>
+        <script src="controllers/videosController.js"></script>
+        <script src="models/videosModel.js"></script>
     </body>
 </html>
