--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,13 @@
         </script>
 
         <script src="youtubeApp.js"></script>
+        <script src="controllers/videosController.js"></script>
+        <script src="models/videosModel.js"></script>
+
         <script src="youtubeApp.spec.js"></script>
+        <script src="controllers/videosController.spec.js"></script>
+        <script src="models/videosModel.spec.js"></script>
+
         <script>
             mocha.run();
         </script>
