--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,9 @@
             mocha.setup('bdd');
         </script>
 
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+
         <script src="youtubeApp.js"></script>
         <script src="controllers/videosController.js"></script>
         <script src="models/videosModel.js"></script>
