--- a/app/templ/detail.tmpl.html
+++ b/app/templ/detail.tmpl.html
@@ -1,26 +1,24 @@
-<!-- <div ng-if="detailsCtrl.video"> -->
-    <!-- <button type="button" class="back" ng-click="detailsCtrl.returnToVideos()"> <<< Return to List of Videos</button> -->
+<div ng-if="videosCtrl.currentVideo">
+    <button type="button" class="back" ng-click="videosCtrl.returnToVideos()"> <-- Return to List of Videos</button>
 
-    <h1>Hello from Details</h1>
-
-    <!-- <ul class="videoList">
+    <ul class="videoList">
         <li class="videoListItem videoDetail">
             <div id="player">
-                <iframe ng-if="detailsCtrl.video" id="player" class="videoThumb"
+                <iframe id="player" class="videoThumb"
                         type="text/html"
-                        src="{{ detailsCtrl.trustSrc(detailsCtrl.video.url) }}"
+                        src="{{ videosCtrl.trustSrc(videosCtrl.currentVideo.url) }}"
                         allowfullscreen>
                 </iframe>
             </div>
 
             <div class="videoListInfo videoDetailInfo">
-                <h4 class="videoTitle">{{ detailsCtrl.video.snippet.title }}</h4>
+                <h4 class="videoTitle">{{ videosCtrl.currentVideo.snippet.title }}</h4>
                 <br/>
-                <h6 class="videoPublished"><b>Published</b> on {{ detailsCtrl.video.snippet.publishedAt | date }}</h6>
+                <h6 class="videoPublished"><b>Published</b> on {{ videosCtrl.currentVideo.snippet.publishedAt | date }}</h6>
                 <br/>
-                <h6 class="videoDescription" ng-if="detailsCtrl.video.snippet.description"><b>Description:</b> {{ detailsCtrl.video.snippet.description }}</h6>
+                <h6 class="videoDescription" ng-if="videosCtrl.currentVideo.snippet.description"><b>Description:</b> {{ videosCtrl.currentVideo.snippet.description }}</h6>
                 <br/>
             </div>
         </li>
-    </ul> -->
-<!-- </div> -->
+    </ul>
+</div>
